--- a/templates/base.html
+++ b/templates/base.html
@@ -75,14 +75,14 @@
 
 
 
-        <script
-                src="https://code.jquery.com/jquery-3.5.1.min.js"
-                integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-                crossorigin="anonymous">
+    <script
+            src="https://code.jquery.com/jquery-3.5.1.min.js"
+            integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+            crossorigin="anonymous">
 
 
-            window.jQuery || document.write("<script src='{% static  "js/jquery-3.5.1.min.js" %}'><\/script>");
-        </script>
+        window.jQuery || document.write("<script src='{% static  "js/jquery-3.5.1.min.js" %}'><\/script>");
+    </script>
 
 
 
@@ -126,8 +126,21 @@
 
 
     <div id="wrapper" class="container">
+    <header>
+        <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+
+                <span class="fs-4">Equestrian Statues Geekiness</span>
+            </a>
+
+            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
+                <a class="py-2 text-dark text-decoration-none" href="#">{% if user.is_authenticated %}{{ user.email }}{% endif %}</a>
+            </nav>
+        </div>
 
 
+    </header>
+    <main>
         {% block main %}
 
             {% block content %}
@@ -135,8 +148,9 @@
             {% endblock content %}
 
         {% endblock main %}
+    </main>
 
-    </div>
+
     {% if not cookielaw_accepted %}
         <style>
             #CookielawBanner {
