--- a/templates/score_statue.html
+++ b/templates/score_statue.html
@@ -22,11 +22,13 @@
         </div>
 
         <div class="row align-items-md-stretch">
+
             <div class="col-md-6">
                 <div class="h-100 p-5 text-white rounded-3">
                     {% if statue.main_image_url %}
                         <img src="{{ statue.main_image_url }}">
-                    {% else %}
+                    {% endif %}
+                        {% if user.is_staff %}
                         <p>
                             <a href="{{ statue.details_url }}" class="btn btn-primary"  onclick="$(this).closest('tr').addClass('highlight');window.open('{{ statue.details_url }}', '{{ statue.name }}', 'width=1500,height=1500'); return false;">Show Details...</a></p>
                         <div class="mb-3">
@@ -40,6 +42,7 @@
                     {% endif %}
                 </div>
             </div>
+
             <div class="col-md-6">
                 <div class="h-100 p-5 bg-light border rounded-3">
                     <div class="mb-3">
