--- a/templates/like_dislike.html
+++ b/templates/like_dislike.html
@@ -8,97 +8,90 @@
 
     {% csrf_token %}
 
-<div class="container py-4">
+    <div class="container py-4">
     <header class="pb-3 mb-4 border-bottom">
-      <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
+        <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
 
-        <span class="fs-4">Equestrian Statues - What do you Like?</span>
-      </a>
+            <span class="fs-4">Equestrian Statues - What do you Like?</span>
+        </a>
     </header>
 
-    <div id="start" class="p-5 mb-4 bg-light rounded-3">
-      <div class="container-fluid py-5">
-        <h1 class="display-5 fw-bold">Thanks for offering to help</h1>
-          <p class="col-md-8 fs-4">I got curious about statues of horses and how the horses are represented, so I've gone geek and am doing some research.  To kick things off I want to get a feel for what you like and dislike, just your first reaction.</p>
-                    <p class="col-md-8 fs-4">If you would like to help, please look at the following 10 images and just say if you Like or Dislike them (or you can say Don't Know).  This is a quick gut feel, you will only get 2 seconds to view the image and 2 seconds to choose your reaction!</p>
-        <button class="btn btn-primary btn-lg" type="button">Get Started...</button>
-      </div>
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col-md-6 offset-md-3">
+                <div class="card">
+                    <img class="card-img-top" src="" alt="Card image cap" id="image">
+                    <div class="card-body">
+                        <h5 class="card-title">Do you like the horse in this statue?</h5>
+                        <p class="card-text">
+                    <button type="button" class="btn btn-success like_dislike " data-like="1" style="width:30%;">Yes</button>
+                    <button type="button" class="btn btn-info like_dislike" data-like="0" style="width:30%;">Don't Know</button>
+<button type="button" class="btn btn-danger like_dislike" data-like="-1" style="width:30%;">No</button>
+                        </p>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     </div>
 
-    {% for statue in statues %}
-<div id="statue_forloop.counter" style="display:none;">
-
-<div class="row align-items-md-stretch">
-      <div class="col-md-6">
-        <div class="h-100 p-5 text-white bg-dark rounded-3">
-          <h2>Change the background</h2>
-          <p>Swap the background-color utility and add a `.text-*` color utility to mix up the jumbotron look. Then, mix and match with additional component themes and more.</p>
-          <button class="btn btn-outline-light" type="button">Example button</button>
-        </div>
-      </div>
-      <div class="col-md-6">
-        <div class="h-100 p-5 bg-light border rounded-3">
-          <h2>Add borders</h2>
-          <p>Or, keep it light and add a border for some added definition to the boundaries of your content. Be sure to look under the hood at the source HTML here as we've adjusted the alignment and sizing of both column's content for equal-height.</p>
-          <button class="btn btn-outline-secondary" type="button">Example button</button>
-        </div>
-      </div>
-    </div>
-
-</div>
-{% endfor %}
-  </div>
-    </form>
 
 {% endblock %}
 
 {% block js %}
-<script>
+    <script>
 
-    function getCookie(name) {
-        var cookieValue = null;
-        if (document.cookie && document.cookie !== '') {
-            var cookies = document.cookie.split(';');
-            for (var i = 0; i < cookies.length; i++) {
-                var cookie = jQuery.trim(cookies[i]);
-                // Does this cookie string begin with the name we want?
-                if (cookie.substring(0, name.length + 1) === (name + '=')) {
-                    cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
-                    break;
+
+        const images = [{% for statue in statues %}"{{ statue.main_image_url }}",{% endfor %}];
+        const images_pk = [{% for statue in statues %}"{{ statue.pk }}",{% endfor %}];
+        let current_pk = 0;
+
+
+        $(document).ready(function() {
+            // Define variables for the images and ratings
+
+
+            // Get references to the HTML elements
+            $("#image").attr('src', images[0]);
+            current_pk = images_pk[0];
+
+
+            // Set up event listener for the Next Image button
+            $(".like_dislike").click(function() {
+
+                 $("#image").fadeOut();
+
+                update_statue(current_pk, {like: $(this).data('like')});
+
+                // Show the next image or finish rating
+                if (images.length > 0) {
+
+                    $("#image").attr("src", images.shift());
+                     $("#image").fadeIn();
+                    current_pk = images_pk.shift();
+
+                } else {
+                    document.location.href = "/like_dislike/done/";
                 }
-            }
-        }
-        return cookieValue;
-    }
-
-    $(document).ready(function() {
-        $('#myTable').DataTable();
-    });
-
-    $(document).on("change", ".form-range", function() {
-        var pk = $(this).data("pk");
-        var payload = {'servant_partner': $(this).val()};
-        update_statue(pk, payload);
-
-    });
-
-    $(document).on("change", ".skip", function() {
-        var pk = $(this).data("pk");
-        var payload = {'skip': this.checked};
-        update_statue(pk, payload);
-    });
-
-    function update_statue(pk, payload) {
-        var csrftoken = getCookie('csrftoken');
-        $.ajax({
-            method: "PATCH",
-            url:  "/api/statues/" + pk +"/",
-            data: payload,
-            beforeSend: function (xhr, settings) {
-                xhr.setRequestHeader("X-CSRFToken", csrftoken);
-            },
+            });
         });
 
-    }
-</script>
+
+
+
+
+        function update_statue(pk, payload) {
+            var csrftoken = getCookie('csrftoken');
+            $.ajax({
+                method: "PATCH",
+                url:  "/api/statues/" + pk +"/like_dislike/",
+                data: payload,
+                beforeSend: function (xhr, settings) {
+                    xhr.setRequestHeader("X-CSRFToken", csrftoken);
+                },
+            });
+
+        }
+    </script>
 {% endblock %}
