--- a/templates/like_dislike_done.html
+++ b/templates/like_dislike_done.html
@@ -16,14 +16,14 @@
             </a>
         </header>
 
-        <div id="start" class="p-5 mb-4 bg-light rounded-3">
-            <div class="container-fluid py-5">
+        <div id="start" class="mb-4 bg-light rounded-3">
+
                 <h1 class="display-5 fw-bold">Thanks for helping</h1>
                 <p class="col-md-8 fs-4">Once there have enough "gut feel" scores, I will start sharing the most liked and disliked and then I will be asking more detailed questions about statues.</p>
-                <p class="col-md-8 fs-4">If you would like to be updated and maybe help with the next phase, please leave your email below.  It won't be shared with anyone and will be deleted at the end of the project, or if you ask me to - my email is phoebe@horsetech.ie.  Thanks you, Phoebe Bright.</p>
+                <p class="col-md-8 fs-4">If you would like to be updated and maybe help with the next phase, please leave your email below.  It won't be shared with anyone and will be deleted at the end of the project.  If you have any questions or ideas do email me at phoebe@horsetech.ie.  Thanks you, Phoebe Bright.</p>
 
 
-                <div class="mx-5">
+
 
                     <form method="post">
                         {% csrf_token %}
@@ -33,8 +33,9 @@
                         </div>
                     </form>
 
-                </div>
-            </div>
+
+
+
         </div>
     </div>
 
