--- a/templates/like_dislike_landing.html
+++ b/templates/like_dislike_landing.html
@@ -19,7 +19,7 @@
     <div id="start" class="p-5 mb-4 bg-light rounded-3">
       <div class="container-fluid py-5">
         <h1 class="display-5 fw-bold">What's it all about?</h1>
-          <p class="col-md-8 fs-4">I got curious about statues of horses and how the horses are represented, so I've gone geek and am doing some research.  To kick things off I want to get a feel for what you like and dislike, just your first reaction to the horse part of the statue.</p>
+          <p class="col-md-8 fs-4">To kick things off I want to get a feel for what you like and dislike, just your first reaction to the horse part of the statue.</p>
                     <p class="col-md-8 fs-4">If you would like to help, please look at the following 10 images and just say if you Like or Dislike them (or you can say Don't Know).  This is a quick gut feel, spend about 2 econds on each page.  </p>
         <button class="btn btn-primary btn-lg" type="button">Get Started...</button>
       </div>
