--- a/templates/base.html
+++ b/templates/base.html
@@ -52,11 +52,11 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/shared_static/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/shared_static/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/shared_static/favicon/favicon-16x16.png">
-    <link rel="manifest" href="/shared_static/favicon/site.webmanifest">
-    <link rel="mask-icon" href="/shared_static/favicon/safari-pinned-tab.svg" color="#5bbad5">
+{#    <link rel="manifest" href="/shared_static/favicon/site.webmanifest">#}
+{#    <link rel="mask-icon" href="/shared_static/favicon/safari-pinned-tab.svg" color="#5bbad5">#}
     <link rel="shortcut icon" href="/shared_static/favicon/favicon.ico">
     <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="msapplication-config" content="/shared_static/favicon/browserconfig.xml">
+{#    <meta name="msapplication-config" content="/shared_static/favicon/browserconfig.xml">#}
     <meta name="theme-color" content="#ffffff">
 
     <link rel="manifest" href="/assets/manifest.json">
