--- a/templates/score_statue.html
+++ b/templates/score_statue.html
@@ -7,63 +7,63 @@
 {% block main %}
 
     <div class="container py-4">
-    <header class="pb-3 mb-4 border-bottom">
-        <a href="/" class="d-flex align-items-center ">
+        <header class="pb-3 mb-4 border-bottom">
+            <a href="/" class="d-flex align-items-center ">
 
-            <span class="fs-4">What about this one?</span>
-        </a>
-    </header>
-<form>
-    {% csrf_token %}
+                <span class="fs-4">What about this one?</span>
+            </a>
+        </header>
+        <form>
+            {% csrf_token %}
 
-    <input id="pk" type="hidden" value="{{ statue.pk }}">
-    <div class="row ">
-        <div class="col">
-            <h3>{{ statue.name }}</h3>
-            <p>{{ statue.scultor }}, {{ statue.year }},  {{ statue.country }}, {{ statue.location }}</p>
-            <p>ID: {{ statue.pk }}</p>
-        </div>
-
-        <div class="row align-items-md-stretch">
-
-            <div class="col-md-6">
-                <div class="h-100 p-5 text-white rounded-3">
-                    {% if statue.main_image_url %}
-                        <img src="{{ statue.main_image_url }}" width="100%">
-                    {% endif %}
-                        {% if user.is_staff %}
-                        <p>
-                            <a href="{{ statue.details_url }}" class="btn btn-primary"  onclick="$(this).closest('tr').addClass('highlight');window.open('{{ statue.details_url }}', '{{ statue.name }}', 'width=1500,height=1500'); return false;">View Statue...</a></p>
-                        <div class="mb-3">
-                            <label for="main_image" class="form-label">Main Image Address</label>
-                            <input id="main_image" type="url" class="form-control main_image" value="{{ statue.main_image_url }}">
-                        </div>
-                        <div class="mb-3">
-                            <p><a href="#" target="_blank">Skip - No image available</a></p>
-                        </div>
-
-                    {% endif %}
+            <input id="pk" type="hidden" value="{{ statue.pk }}">
+            <div class="row ">
+                <div class="col">
+                    <h3>{{ statue.name }}</h3>
+                    <p>{{ statue.scultor }}, {{ statue.year }},  {{ statue.country }}, {{ statue.location }}</p>
+                    <p>ID: {{ statue.pk }}</p>
                 </div>
-            </div>
 
-            <div class="col-md-6">
-                <div class="h-100 p-5 bg-light border rounded-3">
-                    <div class="mb-3">
-                        <label for="servant-partner" class="form-label">Servant=0 Partner=10</label>
-                        <input type="range" class="form-range" min="0" max="10" id="servant-partner" value="{% if statue.servant_partner < 11 %}{{ statue.servant_partner }}{% endif %}" >
+                <div class="row align-items-md-stretch">
+
+                    <div class="col-md-6">
+                        <div class="h-100 p-5 text-white rounded-3">
+                            {% if statue.main_image_url %}
+                                <img src="{{ statue.main_image_url }}" width="100%">
+                            {% endif %}
+                            {% if user.is_staff %}
+                                <p>
+                                    <a href="{{ statue.details_url }}" class="btn btn-primary"  onclick="$(this).closest('tr').addClass('highlight');window.open('{{ statue.details_url }}', '{{ statue.name }}', 'width=1500,height=1500'); return false;">View Statue...</a></p>
+                                <div class="mb-3">
+                                    <label for="main_image" class="form-label">Main Image Address</label>
+                                    <input id="main_image" type="url" class="form-control main_image" value="{{ statue.main_image_url }}">
+                                </div>
+                                <div class="mb-3">
+                                    <p><a href="#" class="skip">Skip - No image available</a></p>
+                                </div>
+
+                            {% endif %}
+                        </div>
+                    </div>
+
+                    <div class="col-md-6">
+                        <div class="h-100 p-5 bg-light border rounded-3">
+                            <div class="mb-3">
+                                <label for="servant-partner" class="form-label">Servant=0 Partner=10</label>
+                                <input type="range" class="form-range" min="0" max="10" id="servant-partner" value="{% if statue.servant_partner < 11 %}{{ statue.servant_partner }}{% endif %}" >
+                            </div>
+                        </div>
                     </div>
                 </div>
+
             </div>
-        </div>
 
-    </div>
+            <div class="d-grid gap-2 col-6 mx-auto">
+                <a href="#" class="btn btn-primary next" type="button">Next...</a>
 
-    <div class="d-grid gap-2 col-6 mx-auto">
-        <a href="{% url "score_statue" %}" class="btn btn-primary" type="button">Next...</a>
+            </div>
 
-    </div>
-
-    </form>
+        </form>
     </div>
 {% endblock %}
 
@@ -79,16 +79,16 @@
 
         });
 
-        $(document).on("change", "#servant-partner", function() {
+        $(document).on("click", ".next", function() {
             var pk = $("#pk").val();
-            var payload = {'servant_partner': $(this).val()};
+            var payload = {'servant_partner': $("#servant-partner").val()};
             add_score(pk, payload);
         });
 
-        $(document).on("change", ".skip", function() {
+        $(document).on("click", ".skip", function() {
             var pk = $("#pk").val();
             var payload = {'skip': this.checked};
-            update_statue(pk, payload);
+            skip(pk, payload);
         });
 
         function update_statue(pk, payload) {
@@ -107,9 +107,23 @@
                 method: "POST",
                 url:  "/api/statues/" + pk +"/add_score/",
                 data: payload
-
+            }).done(function( data ) {
+                next();
             });
+        }
+        function skip(pk, payload) {
+            $.ajax({
+                method: "PATCH",
+                url:  "/api/statues/" + pk +"/skip/",
+                data: payload
 
+            }).done(function( data ) {
+                next();
+            });
+        }
+
+        function next() {
+            document.location.href="{% url "score_statue" %}";
         }
     </script>
 {% endblock %}
