--- a/templates/about.html
+++ b/templates/about.html
@@ -15,7 +15,7 @@
     <img class="d-block mx-auto mb-4" src="{% static "images/statue1.jpg" %}" alt="" width="300" >
     <h1 class="display-5 fw-bold">What's it all about?</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">I got curious about statues of horses when looking at stereotypes of dressage horses using DALE-2 and StableDiffusion (another story!).  We seem to like horses with highly arched necks and I wondered if this was a recent preference or historical?  Then I found Kees Van Tilburg's website with photographs and descriptions of most of the known equestrian statues of the world and so I've gone geek and am doing some research.  Can you help?</p>
+      <p class="lead mb-4">I got curious about statues of horses when looking at stereotypes of dressage horses using DALL-E and StableDiffusion (another story!).  We seem to like horses with highly arched necks and I wondered if this was a recent preference or historical?  Then I found Kees Van Tilburg's website with photographs and descriptions of most of the known equestrian statues of the world and so I've gone geek and am doing some research.  Can you help?</p>
         <p class="lead mb-4">I want to first see if people have a gut preference for the different ways horses are represented in statues. If you can spare a minute, click the Survey 1 button below and you will be shown 10 images of statues with a question about whether you like this respresentation of the horse or not. </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <a href="/like_dislike/" class="btn btn-primary btn-lg px-4 gap-3">Survey 1</a>
