fix link to equestrianstatues

--- a/templates/about.html
+++ b/templates/about.html
@@ -30,7 +30,7 @@
     <div class="col-lg-6 mx-auto">
       <p class="lead mb-4">An amazing archive of 1257 equestrian statues with photos and descriptions of each of the statues. </p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
-        <button a href="https://equestrianstatue.org"  class="btn btn-primary btn-lg px-4 me-sm-3">EquestrianStatue.org</button>
+        <a href="https://equestrianstatue.org"  class="btn btn-primary btn-lg px-4 me-sm-3">EquestrianStatue.org</a>
 
       </div>
     </div>
