limit like/dislike to already viewd

--- a/templates/about.html
+++ b/templates/about.html
@@ -57,8 +57,8 @@
   <div class="container col-xl-10 col-xxl-8 px-4 py-5">
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-7 text-center text-lg-start">
-        <h1 class="display-4 fw-bold lh-1 mb-3">Subscribe to get news</h1>
-        <p class="col-lg-10 fs-4">If you would like the results of this survey or an invitation to participate in round 2, just leave your email.  I won't share it with anyone and emails will be deleted at the end of this project.</p>
+        <h1 class="display-4 fw-bold lh-1 mb-3">Get a Daily Statue</h1>
+        <p class="col-lg-10 fs-4">I'm going to post one statue a day on BlueSky - <a href="https://bsky.app/profile/equistatue.bsky.social">https://bsky.app/profile/equistatue.bsky.social</a></p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
         <form class="p-4 p-md-5 border rounded-3 bg-light" method="post" >
