--- a/templates/like_dislike.html
+++ b/templates/like_dislike.html
@@ -13,7 +13,7 @@
             <div class="row">
                 <div class="col-md-6 offset-md-3">
                     <div class="card">
-                        <img class="card-img-top" src="" alt="Card image cap" id="image">
+                        <img class="card-img-top" src="" alt="Card image cap" id="image" />
                         <div class="card-body">
                             <h5 class="card-title">Do you like the the way the horse is represented in this statue?</h5>
                             <p class="card-text">
