--- a/templates/base.html
+++ b/templates/base.html
@@ -137,18 +137,18 @@
         <div class="d-flex flex-column flex-md-row align-items-center pb-3 mb-4 border-bottom">
             <a href="/" class="d-flex align-items-center text-dark text-decoration-none">
 
-                <span class="fs-4">Equestrian Statues Geekiness</span>
+                <span class="fs-4">Equestrian Statue Geekiness</span>
             </a>
 
-            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">
-                {% if user.is_authenticated %}
-                    <a class="py-2 text-dark text-decoration-none" href="#">{{ user.email }}</a>
-                    <a class="nav-link" href="{% url "keycloak_logout" %}" >{% trans "Signout" %}</a>
-                {% else %}
+{#            <nav class="d-inline-flex mt-2 mt-md-0 ms-md-auto">#}
+{#                {% if user.is_authenticated %}#}
+{#                    <a class="py-2 text-dark text-decoration-none" href="#">{{ user.email }}</a>#}
+{#                    <a class="nav-link" href="{% url "logout" %}" >{% trans "Signout" %}</a>#}
+{#                {% else %}#}
                     {#                    <a class="nav-link" href="{% url "keycloak_register" %}" >{% trans "Signup" %}</a>#}
                     {#                    <a class="nav-link" href="{% url "keycloak_login" %}" >{% trans "Signin" %}</a>#}
-                {% endif %}
-            </nav>
+{#                {% endif %}#}
+{#            </nav>#}
         </div>
 
 
