--- a/templates/show_statues.html
+++ b/templates/show_statues.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load static %}
 
-{% block title %}{% trans "Privacy Policy" %}{% endblock %}
+{% block title %}{% trans "EquiStatue" %}{% endblock %}
 
 
 {%  block extra_head %}
